--- a/index.html
+++ b/index.html
@@ -23,42 +23,42 @@
 <div class="container">
     <main class="main">
         <div class="main__block">
-            <a href="#">
+            <a href="dodzekyn.html">
                 ДОДЗЕ-КУН
             </a>
         </div>
         <div class="main__block">
-            <a href="#">
+            <a href="kickruku.html">
                 УДАРЫ РУКАМИ
             </a>
 
         </div>
         <div class="main__block">
-            <a href="#">
+            <a href="blockruki.html">
                 БЛОКИ РУКАМИ
             </a>
 
         </div>
         <div class="main__block">
-            <a href="#">
+            <a href="kicknogi.html">
                 УДАРЫ НОГАМИ
             </a>
 
         </div>
         <div class="main__block">
-            <a href="#">
+            <a href="kata.html">
                 КАТА
             </a>
 
         </div>
         <div class="main__block">
-            <a href="#">
+            <a href="etiket.html">
                 ЭТИКЕТ
             </a>
 
         </div>
         <div class="main__block_width">
-            <a href="#">
+            <a href="training.html">
                 ТРЕНИРОВКИ
             </a>
 
